--- a/prj.html
+++ b/prj.html
@@ -38,6 +38,7 @@
 </script>
 <body>
     <p><button onclick="window.set_screen(2560,1440)" class = "button button1">-- 2560 x 1440 --</button></p>
+    <p><button onclick="window.set_screen(2560,1080)" class = "button button1">-- 2560 x 1080 --</button></p>
     <p><button onclick="window.set_screen(1920,1200)" class = "button button1">-- 1920 x 1200 --</button></p>
     <p><button onclick="window.set_screen(1920,1080)" class = "button button1">-- 1920 x 1080 --</button></p>
     <p><button onclick="window.set_screen(1280,720)" class = "button button1">-- 1280 x 720 --</button></p>
