--- a/prj.html
+++ b/prj.html
@@ -37,6 +37,7 @@
     
 </script>
 <body>
+    <p><button onclick="window.set_screen(3840,2160)" class = "button button1">-- 3840 x 2160 --</button></p>
     <p><button onclick="window.set_screen(2560,1440)" class = "button button1">-- 2560 x 1440 --</button></p>
     <p><button onclick="window.set_screen(2560,1080)" class = "button button1">-- 2560 x 1080 --</button></p>
     <p><button onclick="window.set_screen(1920,1200)" class = "button button1">-- 1920 x 1200 --</button></p>
